# weather

./: .flake8  .gitignore  README.md  pyproject.toml
configs/: compose.yaml
configs/app/: service.Dockerfile  service.env
configs/postgres/: service.env
src/weather_app/home/: views.py
src/weather_app/home/templates/: base.html
src/weather_app/weather_app/: settings.py
weather_app/home/: urls.py  views.py
weather_app/home/templates/: home.html
weather_app/weather_app/: settings.py  urls.py
